@@ -31,7 +31,7 @@ void WriteDatafiles(int in_shutdown);
 void CatchShutdown(int sig);
 int Usage(char *argv);
 void handle_command(TcpServer *tcps, client_command *cc);
-void NetWriteStatus(const char *in_status);
+int NetWriteStatus(const char *in_status);
 void NetWriteInfo();
 int SayText(string in_text);
 int PlaySound(string in_sound);
